Fix scrolling (#404)
* Fix horizontal scrolling

* Make date headers sticky

--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,7 @@ p {
 
 .timetable {
   display: grid;
+  overflow: auto;
 }
 
 .timeheader,
@@ -75,6 +76,9 @@ p {
   margin: 0.125rem 0 0.125rem 0;
   min-height: 5rem;
   text-align: right;
+  width: 2rem;
+  position: sticky;
+  left: 0;
 }
 .groupheader {
   padding: 0 0.25rem 0 0;
@@ -85,6 +89,8 @@ p {
   border-radius: 0 0.25rem 0.25rem 0;
   font-size: 0.8rem;
   text-align: right;
+  position: sticky;
+  left: 2rem;
 }
 
 .tray-wrapper {
@@ -92,6 +98,7 @@ p {
   background-color: #fff;
   padding-top: 0.125rem;
   z-index: 200;
+  overflow: auto;
 }
 .tray-wrapper.pinned {
   position: sticky;
